kubernetes/mongodb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-deployment
  namespace: mini-oss
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-pod
  template:
    metadata:
      labels:
        app: mongo-pod
    spec:
      containers:
        - name: mongo
          image: mongo:latest
          ports: # 设置容器暴露的端口列表
            - name: mongo-port
              containerPort: 27017
              protocol: TCP
          resources:
            limits:
              memory: 500Mi
              cpu: "1"
          volumeMounts:
            - name: mongo-volume
              mountPath: /data/db
      volumes:
        - name: mongo-volume
          hostPath:
            path: /data/db/mongo
            type: DirectoryOrCreate

---
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
  namespace: mini-oss
spec:
  selector:
    app: mongo-pod
  ports:
    - port: 80 # 指定绑定的node的端口(默认的取值范围是：30000-32767), 如果不指定，会默认分配
      targetPort: 27017
