kubernetes/postgresql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgre-deployment
  namespace: mini-oss
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgre-pod
  template:
    metadata:
      labels:
        app: postgre-pod
    spec:
      containers:
        - name: postgre
          image: suxiaoshao/postgres:latest
          ports: # 设置容器暴露的端口列表
            - name: postgre-port
              containerPort: 5432
              protocol: TCP
          resources:
            limits:
              memory: 500Mi
              cpu: "1"
          volumeMounts:
            - name: postgre-volume
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgre-volume
          hostPath:
            path: /data/db/postgresql
            type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: postgre-service
  namespace: mini-oss
spec:
  selector:
    app: postgre-pod
  ports:
    - port: 80 # 指定绑定的node的端口(默认的取值范围是：30000-32767), 如果不指定，会默认分配
      targetPort: 5432
