kubernetes/graphql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graphql-deployment
  namespace: novel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: graphql-pod
  template:
    metadata:
      labels:
        app: graphql-pod
    spec:
      containers:
        - name: graphql
          image: suxiaoshao/graphql:0.0.1
          ports: # 设置容器暴露的端口列表
            - name: graphql-port
              containerPort: 80
              protocol: TCP
          resources:
            limits:
              memory: 100Mi
              cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: graphql-service
  namespace: novel
spec:
  selector:
    app: graphql-pod
  ports:
    - port: 80 # 指定绑定的node的端口(默认的取值范围是：30000-32767), 如果不指定，会默认分配
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: graphql-ingress
  namespace: novel
spec:
  # apisix-ingress-controller is only interested in Ingress
  # resources with the matched ingressClass name, in our case,
  # it's apisix.
  ingressClassName: apisix
  rules:
    - host: api.novel.sushao.top
      http:
        paths:
          - backend:
              service:
                name: graphql-service
                port:
                  number: 80
            path: /
            pathType: Prefix
