kubernetes/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
  namespace: mini-oss
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-pod
  template:
    metadata:
      labels:
        app: web-pod
    spec:
      containers:
        - name: web
          image: suxiaoshao/web:latest
          ports: # 设置容器暴露的端口列表
            - name: web-port
              containerPort: 80
              protocol: TCP
          resources:
            limits:
              memory: 500Mi
              cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: mini-oss
spec:
  selector:
    app: web-pod
  ports:
    - port: 80 # 指定绑定的node的端口(默认的取值范围是：30000-32767), 如果不指定，会默认分配
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: mini-oss
spec:
  # apisix-ingress-controller is only interested in Ingress
  # resources with the matched ingressClass name, in our case,
  # it's apisix.
  ingressClassName: apisix
  rules:
    - host: admin.mini-oss.top
      http:
        paths:
          - backend:
              service:
                name: web-service
                port:
                  number: 80
            path: /
            pathType: Prefix
    - host: mini-oss.top
      http:
        paths:
          - backend:
              service:
                name: web-service
                port:
                  number: 80
            path: /
            pathType: Prefix
